test/invalidImports/contentSharingService.interface.ts
export interface IContentSharingService {}

export interface ISharingSession {}

export class ContentSharingError {
  public errorCode: string;
}
